--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,82 +1,71 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.23)
+project(
+  SAGE
+  VERSION 0.1
+  LANGUAGES C CXX)
 
-# Use packagename_ROOT for FindPackage.
-if(POLICY CMP0074)
-    cmake_policy(SET CMP0074 NEW)
+if(WIN32)
+  add_definitions(-D_WINDOWS)
+  add_definitions(-DWINVER=0x400)
+  add_definitions(-D_WIN32_WINNT=0x0400)
+elseif(UNIX)
+  add_definitions(-D_UNIX)
 endif()
 
-# Disable default MSVC setting CRT type so we can set it ourselves.
-if(POLICY CMP0091)
-    cmake_policy(SET CMP0091 NEW)
-endif()
-
-# Disable default MSVC warning level so we can set it ourselves.
-if(POLICY CMP0092)
-    cmake_policy(SET CMP0092 NEW)
-endif()
-
-# Allow specifying MSVC debug configurations.
-#if(POLICY CMP0141)
-#    cmake_policy(SET CMP0141 NEW)
-#endif()
-
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
-
-include(FeatureSummary)
+option(SAGE_BUILD_GENERALS "Build the C&C Generals game" OFF)
+option(SAGE_BUILD_ZEROHOUR "Build the C&C Generals Zero Hour game" ON)
+option(SAGE_USE_BINK "Use Bink Video Library" ON)
+option(SAGE_USE_GAMESPY "Use GameSpy" ON)
+option(SAGE_USE_MILES "Use Miles Sound System" ON)
 include(CMakeDependentOption)
+cmake_dependent_option(SAGE_USE_DX8 "Use DirectX 8" ON "WIN32" OFF)
 
-# We don't support in tree builds, so help people make the right choice.
-if (CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR)
-    message(FATAL_ERROR "Building in-source is not supported! Create a build dir and remove ${CMAKE_SOURCE_DIR}/CMakeCache.txt")
-endif()
-
-# Top level project, doesn't really affect anything.
-project(genzh LANGUAGES C CXX)
+message(STATUS "Building Generals: ${SAGE_BUILD_GENERALS}")
+message(STATUS "Building Zero Hour: ${SAGE_BUILD_ZEROHOUR}")
+message(STATUS "Using Bink: ${SAGE_USE_BINK}")
+message(STATUS "Using GameSpy: ${SAGE_USE_GAMESPY}")
+message(STATUS "Using Miles: ${SAGE_USE_MILES}")
+message(STATUS "Using DirectX 8: ${SAGE_USE_DX8}")
 
 include(FetchContent)
-
-# Find/Add build dependencies and stubs shared by all projects
-if((WIN32 OR "${CMAKE_SYSTEM}" MATCHES "Windows") AND ${CMAKE_SIZEOF_VOID_P} EQUAL 4)
-    include(cmake/miles.cmake)
-    include(cmake/bink.cmake)
-    include(cmake/stlport.cmake)
-    include(cmake/dx8.cmake)
-    include(cmake/dbghelp.cmake)
+if(SAGE_USE_BINK)
+  FetchContent_Declare(
+    bink
+    GIT_REPOSITORY https://github.com/TheSuperHackers/bink-sdk-stub.git
+    GIT_TAG f554b7fa68c97d4e6b607d535e726ef37622fe65)
+  FetchContent_MakeAvailable(bink)
 endif()
 
-include(cmake/gamespy.cmake)
-include(cmake/lzhl.cmake)
-include(cmake/zlib.cmake)
-add_subdirectory(Dependencies/Benchmark)
-add_subdirectory(Dependencies/SafeDisc)
-add_subdirectory(Dependencies/MaxSDK)
-
-# EA Compression library, shared between games (diff is comments only)
-#add_subdirectory(GeneralsMD/Code/Libraries/Source/Compression)
-
-# BrowserDispatch COM object interface (No difference)
-#add_subdirectory(GeneralsMD/Code/Libraries/Source/EABrowserDispatch)
-
-# Do we want to build extra SDK stuff or just the game binary?
-option(GENZH_BUILD_ZEROHOUR "Build Zero Hour code." ON)
-option(GENZH_BUILD_GENERALS "Build Generals code." ON)
-
-if(NOT GENZH_BUILD_ZEROHOUR AND NOT GENZH_BUILD_GENERALS)
-    set(GENZH_BUILD_ZEROHOUR TRUE)
-    message("You must select one project to build, building Zero Hour by default.")
+if(SAGE_USE_GAMESPY)
+  set(GS_OPENSSL FALSE)
+  FetchContent_Declare(
+      gamespy
+      GIT_REPOSITORY https://github.com/TheAssemblyArmada/GamespySDK.git
+      GIT_TAG        d7ec6d4fea1c11fc37173ea954fc1ec47202a931
+  )
+  FetchContent_MakeAvailable(gamespy)
 endif()
 
-add_feature_info(ZeroHourStuff GENZH_BUILD_ZEROHOUR "Build Zero Hour code")
-add_feature_info(GeneralsStuff GENZH_BUILD_GENERALS "Build Generals code")
-
-# Add main build targets
-if(GENZH_BUILD_ZEROHOUR)
-    add_subdirectory(GeneralsMD)
+if(SAGE_USE_MILES)
+  FetchContent_Declare(
+    miles
+    GIT_REPOSITORY https://github.com/TheSuperHackers/miles-sdk-stub.git
+    GIT_TAG master)
+  FetchContent_MakeAvailable(miles)
 endif()
 
-if(GENZH_BUILD_GENERALS)
-    add_subdirectory(Generals)
+if(SAGE_USE_DX8)
+  FetchContent_Declare(
+    dx8
+    GIT_REPOSITORY https://github.com/TheSuperHackers/min-dx8-sdk.git
+    GIT_TAG        efd4b6d9f4915bd38aaa2184d49f404a18be59a3)
+  FetchContent_MakeAvailable(dx8)
 endif()
 
-feature_summary(WHAT ENABLED_FEATURES DESCRIPTION "Enabled features:")
-feature_summary(WHAT DISABLED_FEATURES DESCRIPTION "Disabled features:")
+if(SAGE_BUILD_GENERALS)
+  add_subdirectory(Generals/Code)
+endif()
+
+if(SAGE_BUILD_ZEROHOUR)
+  add_subdirectory(GeneralsMD/Code)
+endif()
