--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@
 **/build-*/**
 **/extern/**
 .vscode/
+/buildtrees/
+/build*/
+/downloads/
+/installed*/
+/vcpkg_installed*/
+/packages/
+/scripts/buildsystems/tmp/
+#ignore custom triplets
+/triplets/*
+#add vcpkg-designed triplets back in
+!/triplets/arm-uwp.cmake
+!/triplets/arm64-windows.cmake
+!/triplets/x64-linux.cmake
+!/triplets/x64-osx.cmake
+!/triplets/x64-uwp.cmake
+!/triplets/x64-windows-static.cmake
+!/triplets/x64-windows.cmake
+!/triplets/x86-windows.cmake
+
+!/triplets/community
+!/triplets/community/**
